syntax = "proto3";

package calculator;
option go_package = "calculator/calcpb";

message Num { int64 num = 1; }

message Nums { repeated int64 nums = 1; }

message SumResponse { string result = 1; }

message PrimeNumberDecompositionResponse { string result = 1; }

message Average { string result = 1; }

service CalcService {
  rpc CalcSum(Nums) returns (SumResponse) {};
  rpc PrimeNumberDecomposition(Nums)
      returns (stream PrimeNumberDecompositionResponse) {};
  rpc ComputeAverage(stream Num) returns (Average) {};
}